infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mico
  labels:
    app.kubernetes.io/part-of: jogo-do-mico
